--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -82,95 +82,236 @@
   ::file-selector-button {
     border-color: var(--color-gray-200, currentcolor);
   }
-}
-
-@utility border-test {
-  @apply border border-muted-foreground  dark:border-muted-foreground;
-}
-
-@utility normal-sentences {
-  @apply text-sm text-foreground dark:text-foreground md:text-base lg:text-lg;
-}
-
-@utility medium-sentences {
-  @apply text-lg text-foreground dark:text-foreground sm:text-xl md:text-3xl;
-}
-
-@utility large-sentences {
-  @apply text-xl text-foreground dark:text-foreground md:text-3xl lg:text-5xl;
-}
-
-@utility border-image {
-  @apply shadow-[13px_-13px] shadow-primary;
-}
-
-@layer base {
-  :root {
-    --background: 354.8 50% 95%;
-    --foreground: 354.8 2.5% 7.5%;
-    --card: 354.8 25% 95%;
-    --card-foreground: 354.8 2.5% 12.5%;
-    --popover: 354.8 50% 97.5%;
-    --popover-foreground: 354.8 97.5% 5%;
-    --primary: 354.8 100% 63.7%;
-    --primary-foreground: 0, 0%, 0%;
-    --secondary: 354.8 20% 80%;
-    --secondary-foreground: 0 0% 0%;
-    --muted: 32.8 20% 90%;
-    --muted-foreground: 354.8 2.5% 37.5%;
-    --accent: 32.8 20% 85%;
-    --accent-foreground: 354.8 2.5% 12.5%;
-    --destructive: 0 75% 40%;
-    --destructive-foreground: 354.8 2.5% 95%;
-    --border: 354.8 25% 66%;
-    --input: 354.8 25% 34%;
-    --ring: 354.8 88.7% 45.3%;
-    --radius: 1rem;
-    --sidebar-background: 355, 50%, 90%;
-    --sidebar-foreground: 355, 3%, 7%;
-    --sidebar-primary: 355, 100%, 57%;
-    --sidebar-primary-foreground: 0 0% 0%;
-    --sidebar-accent: 33, 20%, 81%;
-    --sidebar-accent-foreground: 0 0% 0%;
-    --sidebar-border: 355, 25%, 63%;
-    --sidebar-ring: 345, 98%, 45%;
-}
-
-.dark {
-    --background: 354.8 30% 7.5%;
-    --foreground: 354.8 2.5% 95%;
-    --card: 354.8 25% 5%;
-    --card-foreground: 354.8 2.5% 95%;
-    --popover: 354.8 30% 5%;
-    --popover-foreground: 354.8 2.5% 95%;
-    --primary: 354.8 100% 63.7%;
-    --primary-foreground: 0, 0%, 0%;
-    --secondary: 354.8 20% 15%;
-    --secondary-foreground: 0 0% 100%;
-    --muted: 32.8 20% 20%;
-    --muted-foreground: 354.8 2.5% 62.5%;
-    --accent: 32.8 20% 20%;
-    --accent-foreground: 354.8 2.5% 92.5%;
-    --destructive: 0 75% 40%;
-    --destructive-foreground: 354.8 2.5% 95%;
-    --border: 354.8 25% 34%;
-    --input: 354.8 25% 34%;
-    --ring: 354.8 88.7% 45.3%;
-    --radius: 1rem;
-    --sidebar-background: 355, 30%, 10%;
-    --sidebar-foreground: 355, 3%, 100%;
-    --sidebar-primary: 355, 100%, 51%;
-    --sidebar-primary-foreground: 0, 0%, 0%;
-    --sidebar-accent: 33, 20%, 17%;
-    --sidebar-accent-foreground: 0 0% 100%;
-    --sidebar-border: 355, 25%, 32%;
-    --sidebar-ring: 345, 98%, 45%;
+  body {
+    letter-spacing: var(--tracking-normal);
   }
 }
 
+.border-test {
+  @apply border border-muted-foreground dark:border-muted-foreground;
+}
+
+.normal-sentences {
+  @apply text-foreground dark:text-foreground text-sm md:text-base lg:text-lg;
+}
+
+.medium-sentences {
+  @apply text-foreground dark:text-foreground text-lg sm:text-xl md:text-3xl;
+}
+
+.large-sentences {
+  @apply text-foreground dark:text-foreground text-xl md:text-3xl lg:text-5xl;
+}
+
+.border-image {
+  @apply shadow-[13px_-13px] shadow-primary;
+}
+
+/*
+  ---break---
+*/
+
+@theme inline {
+  --font-sans: Outfit, sans-serif;
+  --font-mono: Fira Code, monospace;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --radius: 0.5rem;
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+  --tracking-normal: var(--tracking-normal);
+  --shadow-2xl: var(--shadow-2xl);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-md: var(--shadow-md);
+  --shadow: var(--shadow);
+  --shadow-sm: var(--shadow-sm);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-2xs: var(--shadow-2xs);
+  --spacing: var(--spacing);
+  --letter-spacing: var(--letter-spacing);
+  --shadow-offset-y: var(--shadow-offset-y);
+  --shadow-offset-x: var(--shadow-offset-x);
+  --shadow-spread: var(--shadow-spread);
+  --shadow-blur: var(--shadow-blur);
+  --shadow-opacity: var(--shadow-opacity);
+  --color-shadow-color: var(--shadow-color);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --color-foreground: var(--foreground);
+  --color-background: var(--background);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+}
+
+/*
+  ---break---
+*/
+
+:root {
+  --background: oklch(0.98 0 247.84);
+  --foreground: oklch(0.16 0.04 281.83);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.16 0.04 281.83);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.16 0.04 281.83);
+  --primary: oklch(0.67 0.29 341.41);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.96 0.02 286.02);
+  --secondary-foreground: oklch(0.16 0.04 281.83);
+  --muted: oklch(0.96 0.02 286.02);
+  --muted-foreground: oklch(0.16 0.04 281.83);
+  --accent: oklch(0.89 0.17 171.27);
+  --accent-foreground: oklch(0.16 0.04 281.83);
+  --destructive: oklch(0.65 0.23 34.04);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.92 0.01 225.09);
+  --input: oklch(0.92 0.01 225.09);
+  --ring: oklch(0.67 0.29 341.41);
+  --chart-1: oklch(0.67 0.29 341.41);
+  --chart-2: oklch(0.55 0.29 299.1);
+  --chart-3: oklch(0.84 0.15 209.29);
+  --chart-4: oklch(0.89 0.17 171.27);
+  --chart-5: oklch(0.92 0.19 101.41);
+  --radius: 0.5rem;
+  --sidebar: oklch(0.96 0.02 286.02);
+  --sidebar-foreground: oklch(0.16 0.04 281.83);
+  --sidebar-primary: oklch(0.67 0.29 341.41);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.89 0.17 171.27);
+  --sidebar-accent-foreground: oklch(0.16 0.04 281.83);
+  --sidebar-border: oklch(0.92 0.01 225.09);
+  --sidebar-ring: oklch(0.67 0.29 341.41);
+  --font-sans: Outfit, sans-serif;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: Fira Code, monospace;
+  --shadow-color: hsl(0 0% 0%);
+  --shadow-opacity: 0.1;
+  --shadow-blur: 8px;
+  --shadow-spread: -2px;
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 4px;
+  --letter-spacing: 0em;
+  --spacing: 0.25rem;
+  --shadow-2xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.05);
+  --shadow-sm:
+    0px 4px 8px -2px hsl(0 0% 0% / 0.1), 0px 1px 2px -3px hsl(0 0% 0% / 0.1);
+  --shadow:
+    0px 4px 8px -2px hsl(0 0% 0% / 0.1), 0px 1px 2px -3px hsl(0 0% 0% / 0.1);
+  --shadow-md:
+    0px 4px 8px -2px hsl(0 0% 0% / 0.1), 0px 2px 4px -3px hsl(0 0% 0% / 0.1);
+  --shadow-lg:
+    0px 4px 8px -2px hsl(0 0% 0% / 0.1), 0px 4px 6px -3px hsl(0 0% 0% / 0.1);
+  --shadow-xl:
+    0px 4px 8px -2px hsl(0 0% 0% / 0.1), 0px 8px 10px -3px hsl(0 0% 0% / 0.1);
+  --shadow-2xl: 0px 4px 8px -2px hsl(0 0% 0% / 0.25);
+  --tracking-normal: 0em;
+}
+
+/*
+  ---break---
+*/
+
+.dark {
+  --background: oklch(0.16 0.04 281.83);
+  --foreground: oklch(0.95 0.01 260.73);
+  --card: oklch(0.25 0.06 281.14);
+  --card-foreground: oklch(0.95 0.01 260.73);
+  --popover: oklch(0.25 0.06 281.14);
+  --popover-foreground: oklch(0.95 0.01 260.73);
+  --primary: oklch(0.67 0.29 341.41);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.25 0.06 281.14);
+  --secondary-foreground: oklch(0.95 0.01 260.73);
+  --muted: oklch(0.25 0.06 281.14);
+  --muted-foreground: oklch(0.62 0.05 278.1);
+  --accent: oklch(0.89 0.17 171.27);
+  --accent-foreground: oklch(0.16 0.04 281.83);
+  --destructive: oklch(0.65 0.23 34.04);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.33 0.08 280.79);
+  --input: oklch(0.33 0.08 280.79);
+  --ring: oklch(0.67 0.29 341.41);
+  --chart-1: oklch(0.67 0.29 341.41);
+  --chart-2: oklch(0.55 0.29 299.1);
+  --chart-3: oklch(0.84 0.15 209.29);
+  --chart-4: oklch(0.89 0.17 171.27);
+  --chart-5: oklch(0.92 0.19 101.41);
+  --radius: 0.5rem;
+  --sidebar: oklch(0.16 0.04 281.83);
+  --sidebar-foreground: oklch(0.95 0.01 260.73);
+  --sidebar-primary: oklch(0.67 0.29 341.41);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.89 0.17 171.27);
+  --sidebar-accent-foreground: oklch(0.16 0.04 281.83);
+  --sidebar-border: oklch(0.33 0.08 280.79);
+  --sidebar-ring: oklch(0.67 0.29 341.41);
+  --font-sans: Outfit, sans-serif;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: Fira Code, monospace;
+  --shadow-color: hsl(0 0% 0%);
+  --shadow-opacity: 0.1;
+  --shadow-blur: 8px;
+  --shadow-spread: -2px;
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 4px;
+  --letter-spacing: 0em;
+  --spacing: 0.25rem;
+  --shadow-2xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.05);
+  --shadow-sm:
+    0px 4px 8px -2px hsl(0 0% 0% / 0.1), 0px 1px 2px -3px hsl(0 0% 0% / 0.1);
+  --shadow:
+    0px 4px 8px -2px hsl(0 0% 0% / 0.1), 0px 1px 2px -3px hsl(0 0% 0% / 0.1);
+  --shadow-md:
+    0px 4px 8px -2px hsl(0 0% 0% / 0.1), 0px 2px 4px -3px hsl(0 0% 0% / 0.1);
+  --shadow-lg:
+    0px 4px 8px -2px hsl(0 0% 0% / 0.1), 0px 4px 6px -3px hsl(0 0% 0% / 0.1);
+  --shadow-xl:
+    0px 4px 8px -2px hsl(0 0% 0% / 0.1), 0px 8px 10px -3px hsl(0 0% 0% / 0.1);
+  --shadow-2xl: 0px 4px 8px -2px hsl(0 0% 0% / 0.25);
+}
+
+/*
+  ---break---
+*/
+
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border outline-ring/50;
   }
   body {
     @apply bg-background text-foreground;
